docs/apim/4.8/hybrid-installation-and-configuration-guides/next-gen-cloud/kubernetes/README.md
---
description: Install the self-hosted components of a hybrid API Management 4.8 deployment on Kubernetes. Browse the guides for your provider.
---

# Kubernetes

## Deployment Methods

{% include "../../../.gitbook/includes/hybrid-installation-support.md" %}

* [vanilla-kubernetes.md](vanilla-kubernetes.md "mention")
* [AWS EKS](aws-eks.md)
* [azure-aks.md](azure-aks.md "mention")
* GCP GKE
* [openshift.md](openshift.md "mention")

## Overview

You can use Kubernetes to install the self-hosted components of a Gravitee API Management (APIM) Next-Gen Cloud hybrid architecture. A Kubernetes installation relies on the `values.yaml` configuration file and the Gravitee Helm chart.

The `values.yaml` configuration file serves as the bridge between your local Kubernetes infrastructure and Gravitee Cloud. It contains all of the parameters that define how your hybrid Gateway operates, connects to Gravitee Cloud, and integrates with supporting services like Redis.

The Helm installation process converts your configuration into running Kubernetes resources. These resources provide your API Gateway with the functionality that maintains secure connectivity with Gravitee Cloud.

The following Kubernetes resources are created with the Gravitee Helm chart:

* Deployment objects that manage your Gateway pods
* Service objects that provide network connectivity
* ConfigMap objects that store non-sensitive configuration data
* Secret objects that securely store authentication credentials
* ServiceAccount objects that provide appropriate cluster permissions
